--- a/employee_management/templates/pages/boots.html
+++ b/employee_management/templates/pages/boots.html
@@ -1,7 +1,7 @@
-{% extends "templates/web.html" %}
+<!-- {% extends "templates/web.html" %}
 {% block content %}
-
-<!-- <!DOCTYPE html>
+ -->
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Bootstrap Example</title>
@@ -11,7 +11,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
-<body> -->
+<body>
 
 <!-- <div class="container">
   <p>The <abbr title="World Health Organization">WHO</abbr> was found in 1998.<code>Span</code>,<code>Section</code>,<kbd>Ctrl+c</kbd><pre>the who is found in 1998.</pre></p>
@@ -622,16 +622,24 @@
 
   <hr>
 
+<h4>Popover Example</h4>
 
+<a href="#" title="header" data-toggle="popover" data-content="Some content">Click Me</a><br>
+<a href="#" title="header" data-toggle="popover" data-trigger="hover" data-content="Some content">Hover Over Me</a>
 
-
-
+<script>
+$(document).ready(function(){
+    $('[data-toggle="popover"]').popover();   
+});
+</script>
   <hr>
 
+<!-- </div>
+
+</center> -->
 </div>
+</body>
 
 
 
-
-
-{% endblock %}
+<!-- {% endblock %} -->
